# MLOps-lab11

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
src/lab11_lib/: app.py  aws_utils.py  deprecated_app.py  logger.py  settings.py  test_torch_devices.py
src/lab11_lib/api/: inference.py  models.py
src/lab11_lib/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py
tests/: test_fastapi.py
