[project]
name = "laboratory-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"


[tool.setuptools.packages.find]
where = ["src"]
include = ["lab11_lib"]
exclude = ["tests*"]


[dependency-groups]
integration = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "boto3>=1.42.1",
    "clean-text>=0.6.0",
    "fastapi>=0.118.2",
    "joblib>=1.5.2",
    "pydantic>=2.12.0",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
deployment = [
    "onnxscript>=0.5.6",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "boto3>=1.42.1",
    "clean-text>=0.6.0",
    "joblib>=1.5.2",
    "pydantic>=2.12.0",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
inference = [
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "fastapi>=0.118.2",
    "tokenizers>=0.22.1",
]
